Added quotation <branch#67387952>

--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -24,6 +24,7 @@ The verb is from {{inh|en|enm|braunchen}}, from the noun.
 
 # {{senseid|en|tree}} The [[woody]] part of a [[tree]] arising from the [[trunk]] and usually [[dividing]].
 #: {{syn|en|bough|limb|tiller|tillow|twig|Thesaurus:tree}}
+#* {{RQ:John Heywood Spider|chapter=7|page=50|passage=Selfe loue, to him ſelf tender, to the reſt tough, / Is, of iuſt iuſtice, neither roote, '''braunce''', nor bough. / Loue (namely ſelfe loue) corruptibly growyng, / Is cheefe [[lodestar|lodeſter]] of lets, in iuſtice ſhowing.}}
 # Any of the parts of something that [[divide]]s like the branch of a tree.
 #: {{ux|en|the '''branch''' of an antler, a chandelier, or a railway}}
 # {{senseid|en|creek}} {{lb|en|chiefly|Southern US}} A [[creek]] or [[stream]] which flows into a larger river.
