/* Derived terms */ + <United States of America#67390379>

--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -36,6 +36,7 @@
 * {{l|en|land of the free}} {{qualifier|figurative}}
 
 ====Derived terms====
+* {{l|en|United States of Canada}}
 * {{l|en|Usonia}}, {{l|en|Usonian}}
 
 ====Translations====
