--- a/en/z/zenith.7223.wikitext
+++ b/en/z/zenith.7223.wikitext
@@ -26,8 +26,7 @@ From {{inh|en|enm|cenyth}}, from {{der|en|ML.|cenit}}, from {{der|en|ar|سَمْ
 #* '''1938''', [[w:Xavier Herbert|Xavier Herbert]], ''[[w:Capricornia (novel)|Capricornia]]'', New York: D. Appleton-Century, 1943, Chapter XI, p. 180, [https://archive.org/details/capricornianovel00herb]
 #*: {{quote|en|In the east a pillar of cloud reared from horizon to '''zenith''', with a kind of arm outstretched like a threatening colossus.}}
 # {{lb|en|astronomy}} The [[highest]] point in the sky reached by a [[celestial body]].
-#* '''1719-''' [[w:Daniel Defoe|Daniel Defoe]], ''[[w:Robinson Crusoe|Robinson Crusoe]]''
-#*: {{quote|en|{{...}} in the middle of the day, when the sun was in the '''zenith''', the violence of the heat was too great to stir out {{...}}}}
+#* {{RQ:Defoe Robinson Crusoe|passage={{...}} in the middle of the day, when the sun was in the '''zenith''', the violence of the heat was too great to stir out {{...}}}}
 #* '''1920''', [[w:Peter B. Kyne|Peter B. Kyne]], ''The Understanding Heart'', Chapter II:
 #*: {{quote|en|As far to the west as Monica could see, her world was a sea of fog, {{...}}. Above it arched a cerulean sky; as the sun climbed to the '''zenith''', {{...}}, the fog gradually took on a bluish tinge.}}
 # {{lb|en|by extension}} Highest point or [[state]]; [[peak]].
