t+es:[[captura]] t+pt:[[defesa]] t+it:[[parata]] t+fr:[[arrest]] t+ca:[[atrapar]] t-balance ([[WT:EDIT|Assisted]]) <catch#67423180>

--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -204,15 +204,19 @@ The verb became irregular, possibly under the influence of the semantically simi
 {{trans-bottom}}
 
 {{trans-top|the game of catching a ball}}
+* Catalan: {{t+|ca|atrapar|m}}
 * Chinese:
 *: Mandarin: {{t-needed|cmn}}
 * Danish: {{t|da|kaste bold}}
 * Estonian: {{t|et|püüdmine}}
-{{trans-mid}}
 * Finnish: {{t|fi|kopittelu}}
+{{trans-mid}}
+* French: {{t+|fr|arrest|m}}
+* Italian: {{t+|it|parata|f}}
 * Japanese: {{t|ja|キャッチボール|tr=kyatchi bōru}}
-* Portuguese: {{t-needed|pt}}
+* Portuguese: {{t+|pt|defesa|f}}
 * Russian: {{t-needed|ru}}
+* Spanish: {{t+|es|captura|f}}
 {{trans-bottom}}
 
 ===Verb===
