/* Pronunciation */[kʰʊə̯t] is a possible realization of /kɔːt/ in NYC English, etc. <caught#67448913>

--- a/en/c/caught.6831.wikitext
+++ b/en/c/caught.6831.wikitext
@@ -7,7 +7,7 @@
 ** {{audio|en|en-uk-caught.ogg|Audio (UK)}}
 ** {{a|Australia|New Zealand}} {{IPA|en|[k̠ʰoːt]}}
 ** {{audio|en|en-au-caught.ogg|Audio (Australia)}}
-** {{a|US}} {{IPA|en|[kʰɔt]|[kʰɔə̯t]|[kʰoə̯t]}}
+** {{a|US}} {{IPA|en|[kʰɔt]|[kʰɔə̯t]|[kʰoə̯t]|[kʰʊə̯t]}}
 *** {{audio|en|en-us-contrastive-caught.ogg|Audio (distinctive cot-caught)}}
 ** {{a|US}} {{IPA|en|[kʰɑt]}}
 *** {{audio|en|en-us-caught.ogg|Audio (US cot-caught merged)}}
