--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -60,7 +60,7 @@ From {{inh|en|enm|counten}}, borrowed from {{der|en|xno|conter}}, from {{der|en|
 * Asturian: {{t|ast|contar}}
 * Azerbaijani: {{t+|az|saymaq}}
 * Belarusian: {{t|be|рахава́ць}}, {{t|be|лічы́ць|impf}}, {{t|be|палічы́ць|pf}}
-* Bengali: {{t|bn|গণনা}}
+* Bengali: {{t|bn|গণনা}}, {{t|bn|গোনা}}
 * Breton: {{t+|br|kontañ}}
 * Bulgarian: {{t+|bg|бро́я|impf}}
 * Burmese: {{t+|my|ရေ}}, {{t+|my|ရေတွက်}}
@@ -112,8 +112,8 @@ From {{inh|en|enm|counten}}, borrowed from {{der|en|xno|conter}}, from {{der|en|
 * Kurdish:
 *: Central Kurdish: {{t+|ckb|ژماردن}}
 * Kyrgyz: {{t+|ky|саноо}}
-* Lao: {{t|lo|ນັບ}}
 {{trans-mid}}
+* Lao: {{t|lo|ນັບ}}
 * Latgalian: {{t|ltg|saskaiteit}}, {{t|ltg|skaitļuot}}, {{t|ltg|skaiteit}}
 * Latin: {{t+|la|numerō}}, {{t|la|computō}}
 * Latvian: {{t|lv|skaitīt}}, {{t|lv|rēķināt}}
