--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -32,7 +32,7 @@ From {{uder|en|nl|Nieuw-Zeeland||new Zeeland}} ({{m|nl|nieuw}} calqued as {{m|en
 * {{l|en|Maoriland}}
 * {{l|en|NZ}} {{qualifier|abbreviation}}
 * {{l|en|Zealandia}}
-* {{l|en|Fernland}}
+* {{l|en|Novonia}} {{dated|Latin}}
 
 ====Holonyms====
 * {{l|en|Polynesia}}
