--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -37,11 +37,12 @@ From {{der|en|enm|Israel}}, from {{der|en|ang|-}}, borrowed from {{der|en|la|Isr
 * {{sense|region}} {{U:en:I-P}}
 
 ====Synonyms====
-* {{sense|State of Israel}} the [[State of Israel]] {{qualifier|official name}}, [[Jewsrael]] {{qualifier|derogatory}}, [[Zionistan]] {{qualifier|derogatory}}
-* {{sense|Land of Israel}} the [[Land of Israel]], [[Palestine]], the [[Holy Land]], [[Canaan]]
-* {{sense|the Jews}} the [[Children of Israel]], the [[Israelite]]s, [[Zion]]
+* {{sense|State of Israel}} {{l|en|the [[State of Israel]]}} {{qualifier|official name}}, {{l|en|Israhell}}, {{l|en|Jewsrael}} {{qualifier|derogatory}}, {{l|en|Zionistan}} {{qualifier|derogatory}}
+* {{sense|Land of Israel}} the {{l|en|Land of Israel}}, {{l|en|Palestine}}, the {{l|en|Holy Land}}, {{l|en|Canaan}}
+* {{sense|the Jews}} {{l|en|the [[Children of Israel]]}}, {{l|en|the [[Israelite]]s}}, {{l|en|Zion}}
 
 ====Derived terms====
+* {{l|en|anti-Israel}}
 * {{l|en|Israelian}}
 * {{l|en|Israeli}}
 * {{l|en|Israelophile}}
@@ -53,6 +54,7 @@ From {{der|en|enm|Israel}}, from {{der|en|ang|-}}, borrowed from {{der|en|la|Isr
 * {{l|en|Israhell}}
 * {{l|en|Isratine}}
 * {{l|en|Jewsrael}}
+* {{l|en|pro-Israel}}
 
 ====Related terms====
 * {{l|en|Israelite}}
