--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -390,12 +390,16 @@ From {{der|en|enm|Israel}}, from {{der|en|ang|-}}, borrowed from {{der|en|la|Isr
 * {{hyph|de|Is|ra|el}}
 
 ===Proper noun===
+{{head|de|proper noun}}
+
+# {{lb|de|biblical character}} [[#English|Israel]], another name of the patriarch [[Jacob]]
+#* '''1912''', Lutherbibel 1912, 1.Mose 32, 29 (Luther Bible 1912, Genesis 32:29):
+#*: {{quote|de|Er sprach: Du sollst nicht mehr Jakob heißen, sondern '''Israel'''; denn du hast mit Gott und mit Menschen gekämpft und bist obgelegen.}}
+
+===Proper noun===
 {{de-proper noun|toponym}}
 
 # {{place|de|country|r/Western Asia|t=Israel}}
-# {{lb|de|biblical character}} [[#English|Israel]], another name of the patriarch [[Jacob]]
-#* {{rfdate|de}} Lutherbibel 1912, 1.Mose 32, 29 (Luther Bible 1912, Genesis 32:29):
-#*: {{quote|de|Er sprach: Du sollst nicht mehr Jakob heißen, sondern '''Israel'''; denn du hast mit Gott und mit Menschen gekämpft und bist obgelegen.}}
 
 ====Synonyms====
 * {{sense|State of Israel}} {{l|de|Staat Israel}} {{qualifier|official name}}
