--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -24,6 +24,7 @@ From {{uder|en|nl|Nieuw-Zeeland||new Zeeland}} ({{m|nl|nieuw}} calqued as {{m|en
 * {{q|from [[Maori]]}} {{l|en|Aotearoa}}; {{q|from [[calque]] of [[Maori]]}} {{l|en|Land of the Long White Cloud}}
 * {{l|en|Aotearoa New Zealand}}
 * {{l|en|Dominion of New Zealand}} {{q|dated|formal}}
+* {{l|en|Manawa}}
 * {{l|en|Enzed}}
 * {{l|en|Godzone}} {{q|New Zealand|informal}}
 * {{l|en|Kiwiland}}
@@ -31,7 +32,7 @@ From {{uder|en|nl|Nieuw-Zeeland||new Zeeland}} ({{m|nl|nieuw}} calqued as {{m|en
 * {{l|en|Maoriland}}
 * {{l|en|NZ}} {{qualifier|abbreviation}}
 * {{l|en|Zealandia}}
-* {{l|en|Novonia}} {{q|dated|Latin}}
+* {{l|en|Fernland}}
 
 ====Holonyms====
 * {{l|en|Polynesia}}
@@ -40,10 +41,16 @@ From {{uder|en|nl|Nieuw-Zeeland||new Zeeland}} ({{m|nl|nieuw}} calqued as {{m|en
 {{top2}}
 * {{l|en|Enzedder}}
 * {{l|en|New Zealander}}
-* {{l|en|Novo-}}
-* {{l|en|Novonia}}
+* {{l|en|Manawanian}}
+* {{l|en|New Zealand English}}
+* {{l|en|New Zealand flax}}
+* {{l|en|Zealandian}}
 * {{l|en|New Zealandic}}
 * {{l|en|New Zealandress}}
+* {{l|en|New Zealand tea tree}}
+* {{l|en|Zealandia}}
+* {{l|en|Zeelandia}}
+* {{l|en|Zealandica}}
 {{bottom}}
 
 ====Descendants====
