--- a/en/坐/坐.13011.wikitext
+++ b/en/坐/坐.13011.wikitext
@@ -57,6 +57,7 @@ Cognate with {{cog|sit-jap|amdzɯ|a'''mdzɯ'''}} ({{zh-ref|Zhang, Jacques, and L
 #: {{zh-x|坐下|to '''sit''' down}}
 #: {{zh-x|請{Chhiáⁿ} 坐！|Please '''take a seat'''!|MN}}
 # to [[go]] [[by]]; to [[travel]] by; to [[ride]]
+#: {{zh-x|坐 公交車 不 小心 坐 過頭|to miss one's stop on the bus}}
 #: {{zh-x|我 坐 飛機 去 ^上海。|I go to Shanghai '''by''' plane.}}
 #: {{zh-x|她 開車 去， 不 坐 火車 去。|She does not go '''by''' train, she drives.}}
 # to [[bear]] [[fruit]]
