--- a/en/i/ich.12974.wikitext
+++ b/en/i/ich.12974.wikitext
@@ -522,6 +522,7 @@ From {{inh|de|gmh|ich}}, from {{inh|de|goh|ih}}, from {{inh|de|gem-pro|[[*ek]], 
 * {{IPA|de|/ɪç/}}
 * {{audio|de|De-ich.ogg}}
 * {{a|Austria}} {{audio|de|De-at-ich.ogg}}
+* {{homophones|de|Ich}}
 * {{rhyme|de|ɪç|s=1}}
 
 ===Pronoun===
