--- a/en/s/spelt.7213.wikitext
+++ b/en/s/spelt.7213.wikitext
@@ -73,6 +73,7 @@ From {{inh|en|enm|spelt}}, from {{inh|en|ang|spelt||spelt, corn}}, from {{der|en
 * Ukrainian: {{t|uk|спельта|f}}
 * Walloon: {{t+|wa|speate|f}}
 * Welsh: {{t|cy|sbelt|m}}
+* Zazaki: {{t|zza|xeleyo derg }}
 {{trans-bottom}}
 
 =====Descendants=====
