/* Etymology */  (using [[MediaWiki:Gadget-AjaxEdit.js|AjaxEdit]]) <早#67526554>

--- a/en/早/早.16913.wikitext
+++ b/en/早/早.16913.wikitext
@@ -29,7 +29,7 @@ Small seal script: {{Han compound|日|甲|ls=ic|t1=sun|t2=first}} – when the s
 In some ancient texts, {{och-l|蚤}} was often used instead.
 
 ===Etymology===
-Possible cognate found in {{cog|hmx-pro|*ntsi̯ouˣ||early}}, whence {{cog|mww|ntxov}} and {{cog|ium|nziou}} ({{zh-ref|Baxter and Sagart, 2014}}; {{zh-ref|Schuessler, 2007}}), and {{cog|tai-pro|*ɟa:wꟲ||early morning}}, whence {{cog|th|เช้า}} and {{cog|khb|ᦋᧁᧉ}}.
+Possible cognate found in {{cog|hmx-pro|*ntsi̯ouˣ||early}}, whence {{cog|mww|ntxov}} and {{cog|ium|nziou}} ({{zh-ref|Baxter and Sagart, 2014}}; {{zh-ref|Schuessler, 2007}}), and {{cog|tai-pro|*ɟaːwꟲ||early morning}}, whence {{cog|th|เช้า}} and {{cog|khb|ᦋᧁᧉ}}.
 
 ===Pronunciation===
 {{zh-pron
