--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -62,7 +62,7 @@ From {{inh|en|enm|souken}}, {{m|enm|suken|}}, from {{inh|en|ang|sūcan|t=to suck
 # {{lb|en|transitive}} To put the [[mouth]] or [[lips]] to (a breast, a mother etc.) to draw in milk. {{defdate|from 11th c.}}
 # {{lb|en|transitive}} To [[extract]], draw in (a substance) from or out of something. {{defdate|from 14th c.}}
 #* '''1596''', Edmund Spenser, ''The Faerie Queene'', IV.i:
-#*: That she may '''sucke''' their life, and drinke their blood, / With which she from her childhood had bene fed.
+#*: That she may '''sucke''' their life, and drinke their blood, <br> With which she from her childhood had bene fed.
 # {{lb|en|transitive|archaic}} To [[inhale]] (air), to [[draw]] ([[breath]]).
 #* {{RQ:Marlowe Tamburlaine|1|II|vi|page=40|And ſince we all haue '''ſuckt''' on[e] wholſome aire,<br>And with the ſame proportion of Elements,<br>Reſolue, I hope we are reſembled,<br>Uowing our loues to equall death and life, {{...}}}}
 # {{lb|en|transitive}} To work the [[lip]]s and [[tongue]] on (an object) to extract [[moisture]] or [[nourishment]]; to absorb (something) in the mouth. {{defdate|from 14th c.}}
