--- a/en/l/libre.1514.wikitext
+++ b/en/l/libre.1514.wikitext
@@ -144,6 +144,10 @@ Borrowed from {{bor|bcl|es|libre}}.
 ===Etymology===
 Borrowed from {{bor|ceb|es|libre}}, from {{der|ceb|la|līber}}, from {{der|ceb|itc-ola|loeber}}, from {{der|ceb|itc-pro|*louðeros}}, from {{der|ceb|ine-pro|*h₁lewdʰ-er-os}}, from {{m|ine-pro|*h₁lewdʰ-||people}}.
 
+===Pronunciation===
+* {{hyph|ceb|lib|re}}
+* {{ceb-IPA}}
+
 ===Adjective===
 {{head|ceb|adjective}}
 
