/* See also */ <libre#67547803>

--- a/en/l/libre.1514.wikitext
+++ b/en/l/libre.1514.wikitext
@@ -94,11 +94,8 @@ Sense 2 (“(''software'') with very few limitations on distribution or improvem
 ====Coordinate terms====
 * {{l|en|affranchi}}
 
-===See also===
-* {{l|en|FLOSS}}
-* {{l|en|free as in beer}}
-* {{l|en|free as in speech}}
-* {{l|en|gratis}}
+====See also====
+{{col3|en|FLOSS|free as in beer|free as in speech|gratis}}
 
 ===References===
 <references />
