--- a/en/l/libre.1514.wikitext
+++ b/en/l/libre.1514.wikitext
@@ -254,6 +254,7 @@ From Old Galician and {{inh|gl|roa-opt|libre}}, {{m|roa-opt|livre}} (13th centur
 Borrowed from {{bor|hil|es|libre}}.
 
 ===Pronunciation===
+* {{hyph|hil|lib|re}}
 * {{IPA|hil|/ˈlibɾɛ/}}
 
 ===Adjective===
