/* West Frisian */  (using [[MediaWiki:Gadget-AjaxEdit.js|AjaxEdit]]) <spelt#67549474>

--- a/en/s/spelt.7213.wikitext
+++ b/en/s/spelt.7213.wikitext
@@ -166,6 +166,9 @@ From {{der|da|gml|spelte}}.
 ===Etymology===
 Ultimately from {{der|fy|gem-pro|*spiltaz}}. {{rfe|fy}}
 
+===Pronunciation===
+* {{IPA|fy|/spɛlt/}}
+
 ===Noun===
 {{fy-noun}}
 
