--- a/en/c/choose.6832.wikitext
+++ b/en/c/choose.6832.wikitext
@@ -7,7 +7,7 @@
 {{root|en|ine-pro|*ǵews-}}
 From {{inh|en|enm|cheosen}}, {{m|enm|chesen}}, from {{inh|en|ang|ċēosan||to choose, seek out, select, elect, decide, test, accept, settle for, approve}}, from {{inh|en|gmw-pro|*keusan}}, from {{inh|en|gem-pro|*keusaną||to taste, choose}}, from {{inh|en|ine-pro|*ǵéwseti}}, from {{m|ine-pro|*ǵews-||to taste, try}}. 
 
-Cognate with {{cog|sco|chuise}}, {{m|sco|cheese||to choose}}, {{cog|fr|choisir||to choose}}, {{cog|frr|kese||to choose}}, {{cog|fy|kieze||to choose}}, {{cog|nl|kiezen||to choose}}, {{cog|nds|kesen||to choose}}, archaic and partially obsolete {{cog|de|kiesen||to choose}}, {{cog|da|kyse||to frighten (via ‘to charm, allure’ and ‘to enchant’)}}, {{cog|no|kjose||to choose}}, {{cog|sv|tjusa||to charm, allure, enchant}}, {{cog|is|kjósa||to choose, vote, elect}}, {{cog|got|𐌺𐌹𐌿𐍃𐌰𐌽||to test}}, {{cog|la|gustō||I taste, sample}}, {{cog|grc|γεύω||to feed}}, {{cog|sa|जोषति|tr=jóṣati||to like, enjoy}}, {{cog|ru|кушать|kúšatʹ|to have a meal, to eat}}.
+Cognate with {{cog|sco|chuise}}, {{m|sco|cheese||to choose}}, {{cog|frr|kese||to choose}}, {{cog|stq|kjoze|t=to choose}}, {{cog|fy|kieze||to choose}}, {{cog|nl|kiezen||to choose}}, {{cog|fr|choisir||to choose}}, {{cog|nds|kesen||to choose}}, {{cog|nds-de|kiesen|t=to pick, select}}, archaic and partially obsolete {{cog|de|kiesen||to choose}}, {{cog|da|kyse||to frighten (via ‘to charm, allure’ and ‘to enchant’)}}, {{cog|no|kjose||to choose}}, {{cog|sv|tjusa||to charm, allure, enchant}}, {{cog|is|kjósa||to choose, vote, elect}}, {{cog|got|𐌺𐌹𐌿𐍃𐌰𐌽||to test}}, {{cog|la|gustō||I taste, sample}}, {{cog|grc|γεύω||to feed}}, {{cog|sa|जोषति|tr=jóṣati||to like, enjoy}}, {{cog|ru|кушать|kúšatʹ|to have a meal, to eat}}.
 
 ====Pronunciation====
 * {{enPR|cho͞oz}}, {{IPA|en|/t͡ʃuːz/}}
