--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -42,7 +42,9 @@ From {{inh|en|enm|France}}, from {{der|en|fro|France}}, from {{der|en|la|Francia
 
 ====Derived terms====
 {{der3|en|
+|Free France
 |Petty France
+|Vichy France
 }}
 
 ====Related terms====
