/* Usage notes */ fine, add conjugation to keep that info (using [[MediaWiki:Gadget-AjaxEdit.js|AjaxEdit]]) <feel#67597854>

--- a/en/f/feel.6876.wikitext
+++ b/en/f/feel.6876.wikitext
@@ -56,6 +56,9 @@ From {{inh|en|enm|felen}}, from {{inh|en|ang|fÄ“lan}}, from {{inh|en|gmw-pro|*fÅ
 * When referring to the emotional state, most prescriptive grammarians prefer "I feel bad" to "I feel badly", but "I feel badly" is widely used this way in US English.
 * In senses 2, 3, and 5, this is generally a [[stative verb]] that rarely takes the continuous inflection. See [[:Category:English stative verbs]]
 
+=====Conjugation=====
+{{en-conj-simple|past=felt|past_2sg_old2=feltest}}
+
 =====Derived terms=====
 {{der4|en|title=Terms derived from ''feel'' (verb)
 |feel around
