--- a/en/p/push.8439.wikitext
+++ b/en/p/push.8439.wikitext
@@ -63,27 +63,28 @@ From {{inh|en|enm|pushen}}, {{m|enm|poshen}}, {{m|enm|posson}}, borrowed from {{
 * {{sense|apply a force to something so it moves away}} {{l|en|draw}}, {{l|en|pull}}, {{l|en|tug}}
 * {{sense|put onto a stack}} {{l|en|pop}}
 
-=====Hyponyms=====
-{{col3|en
+=====Derived terms=====
+{{der3|en|title=Phrasal verbs
 |push around
+|push aside
 |push down
 |push in
 |push off
-|push one's luck
+|push out
 |push over
-|push someone's buttons
+|push up
 }}
-
-=====Derived terms=====
-{{col3|en
+{{der3|en|title=Other derived terms
 <!--"give someone the push-off" is derived from "push off"-->
 |push-and-pull
 |[[pushbike]], [[push-bike]]
 |[[push button]], [[push-button]], [[pushbutton]]
 |pusher
 |pushful
+|push one's luck
 |pushover
 |push-pull
+|push someone's buttons
 |[[push the edge of the envelope]], [[push the envelope]]
 |push-up
 |pushy
