--- a/en/p/push.8439.wikitext
+++ b/en/p/push.8439.wikitext
@@ -66,6 +66,7 @@ From {{inh|en|enm|pushen}}, {{m|enm|poshen}}, {{m|enm|posson}}, borrowed from {{
 =====Derived terms=====
 {{der3|en|title=Phrasal verbs
 |push around
+|push away
 |push aside
 |push down
 |push in
