--- a/en/昂/昂.16938.wikitext
+++ b/en/昂/昂.16938.wikitext
@@ -80,7 +80,7 @@
 # {{zh-alt-form|*仰|to raise one's head; to have one's face and belly face upward}}
 
 ====Compounds====
-{{zh-der|昂船洲|打昂瞓}}
+{{zh-der|昂船洲|打昂瞓|昂坪}}
 
 ----
 
