/* Definitions */ edited using [[wikt:User:Dixtosa/AjaxEdit.js|AjaxEdit]] <倫#67631597>

--- a/en/倫/倫.11047.wikitext
+++ b/en/倫/倫.11047.wikitext
@@ -44,7 +44,7 @@
 #: {{zh-x|倫常|feudal order of importance or seniority in human relationships}}
 #: {{zh-x|人倫|human relations (according to feudal ethics)}}
 # {{†}} [[reason]]; [[logic]]
-# [[order]]; [[logical]] [[sequence]]
+# [[coherence]]; [[order]]; [[logical]] [[sequence]]
 #: {{zh-x|語無倫次|to speak incoherently}}
 # {{surname|zh}}
 
