--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -271,56 +271,56 @@ From {{inh|en|enm|floten}}, from {{inh|en|ang|flotian|t=to float}}, from {{inh|e
 {{trans-bottom}}
 
 ===Noun===
-[[File:G164A on Floats.jpg|right|thumb|A small plane on floats (buoyant devices)]]
+[[File:G164A on Floats.jpg|right|thumb|A small plane on '''floats''' (buoyant devices).]]
 {{en-noun}}
 
-# {{senseid|en|buoyant}} A [[buoyant]] device used to support something in water or another liquid.
+# {{senseid|en|buoyant}} A [[buoyant]] [[device]] used to [[support]] something in [[water]] or another [[liquid]].
 #: {{ux|en|Attach the '''float''' and the weight to the fishing line, above the hook.}}
-#* {{quote-book|en|year=1983|title=The Fisherman Who Laughed|page=40|passage=`What you need are frogs,' said the veteran. `Fish them at night. There's nothing like them on big cork '''floats'''.'}}
-# A mass of timber or boards fastened together, and conveyed down a stream by the current; a [[raft]].
+#* {{quote-book|en|year=1983|title=The Fisherman Who Laughed|page=40|passage='What you need are frogs,' said the veteran. 'Fish them at night. There's nothing like them on big cork '''floats'''.'}}
+# A [[mass]] of [[timber]] or [[board]]s [[fasten]]ed [[together]], and [[convey]]ed [[down]] a [[stream]] by the [[current]]; a [[raft]].
 # A [[float board]].
-# A tool similar to a [[rasp]], used in various trades.
-# A sort of [[trowel]] used for finishing [[concrete]] surfaces or smoothing [[plaster]].
+# A [[tool]] similar to a [[rasp]], used in various [[trade]]s.
+# A sort of [[trowel]] used for [[finish]]ing [[concrete]] [[surface]]s or [[smooth]]ing [[plaster]].
 #: {{ux|en|When pouring a new driveway, you can use a two-by-four as a '''float'''.}}
-# An elaborately decorated trailer or vehicle, intended for display in a [[parade]] or [[pageant]].
+# An [[elaborate]]ly [[decorated]] [[trailer]] or [[vehicle]], [[intended]] for [[display]] in a [[parade]] or [[pageant]].
 #: {{ux|en|That '''float''' covered in roses is very pretty.}}
-# {{lb|en|British}} A small vehicle used for local deliveries, especially in the term [[milk float]].
+# {{lb|en|British}} A [[small]] [[vehicle]] used for [[local]] [[delivery|deliveries]], especially in the term {{m|en|milk float}}.
 #* '''1913''', [[w:D. H. Lawrence|D.H. Lawrence]], ''[[s:Sons_and_Lovers|Sons and Lovers]]'', [[s:Sons and Lovers/Chapter VII|chapter 7]]
 #*: As soon as the skies brightened and plum-blossom was out, Paul drove off in the milkman's heavy '''float''' up to Willey Farm.
-# {{lb|en|finance}} Funds committed to be paid but not yet paid.
+# {{lb|en|finance}} [[funds|Funds]] [[committed]] to be [[paid]] but not yet paid.
 #: {{ux|en|Our bank does a nightly sweep of accounts, to adjust the '''float''' so we stay within our reserves limit.}}
-# {{lb|en|finance|Australia|and other Commonwealth countries?}} An offering of [[share]]s in a [[company]] (or [[unit]]s in a [[trust]]) to members of the public, normally followed by a listing on a [[stock exchange]].
+# {{lb|en|finance|Australia|and other Commonwealth countries?}} An [[offering]] of [[share]]s in a [[company]] (or [[unit]]s in a [[trust]]) to [[member]]s of the [[public]], normally [[followed]] by a [[listing]] on a [[stock exchange]].
 #* {{quote-web|en|year=2006|passage=You don't actually need a broker to buy shares in a '''float''' when a company is about to be listed on the Australian Stock Exchange.|work=[[w:Australian Securities and Investments Commission|Australian Securities and Investments Commission]] financial tips article|title=Buying shares in a float|url=https://web.archive.org/web/20050716011533/http://www.fido.asic.gov.au/fido/fido.nsf/print/Buying+shares+in+a+float?opendocument}}
-# {{lb|en|banking}} The total amount of checks/cheques or other drafts written against a bank account but not yet cleared and charged against the account.
+# {{lb|en|banking}} The [[total]] [[amount]] of [[check]]s/[[cheque]]s or other [[draft]]s [[write|written]] against a [[bank account]] but not yet [[clear]]ed and [[charge]]d against the account.
 #: {{ux|en|No sir, your current '''float''' is not taken into account, when assets are legally garnished.}}
-# {{lb|en|insurance}} Premiums taken in but not yet paid out.
+# {{lb|en|insurance}} [[premium|Premium]]s [[take in|taken in]] but not yet [[pay out|paid out]].
 #: {{ux|en|We make a lot of interest from our nightly '''float'''.}}
-# {{lb|en|programming}} A [[floating-point number]], especially one that has lower precision than a [[double]].
+# {{lb|en|programming}} A [[floating-point number]], especially one that has lower [[precision]] than a [[double]].
 #: {{ux|en|That routine should not have used an int; it should be a '''float'''.}}
 #* '''2011''', Rubin H. Landau, ''A First Course in Scientific Computing'' (page 214)
 #*: If you want to be a scientist or an engineer, learn to say “no” to singles and '''floats'''.
-# A [[soft]] beverage with a [[scoop]] of [[ice-cream]] floating in it.
+# A [[soft]] [[beverage]] with a [[scoop]] of [[ice-cream]] [[#Verb|float]]ing in it.
 #: {{ux|en|I don't consider anything other than root-beer with vanilla ice-cream to be a "real" '''float'''.}}
-# A small sum of money put in a [[cashier]]'s [[till]], or otherwise secured, at the start of business to enable [[change]] to be made.
-# {{lb|en|poker}} A maneuver where a player calls on the [[flop]] or [[turn]] with a weak hand, with the intention of [[bluff#Verb|bluffing]] after a subsequent [[community card]].
-# {{lb|en|knitting}} One of the loose ends of [[yarn]] on an unfinished work.
-# {{lb|en|automotive}} a [[car carrier]] or [[car transporter]] truck or truck-and-trailer combination
-# {{lb|en|transport}} a [[lowboy]] trailer
-# {{lb|en|obsolete}} The act of flowing; flux; flow.
+# A [[small]] [[sum]] of [[money]] put in a [[cashier]]'s [[till]], or otherwise [[secure]]d, at the [[start]] of [[business]], to [[enable]] [[change]] to be made.
+# {{lb|en|poker}} A [[maneuver]] where a [[player]] [[call]]s on the [[flop]] or [[turn]] with a [[weak]] [[hand]], with the [[intention]] of [[bluff#Verb|bluffing]] after a subsequent [[community card]].
+# {{lb|en|knitting}} One of the [[loose end]]s of [[yarn]] on an [[unfinished]] [[work]].
+# {{lb|en|automotive}} A [[car carrier]] or [[car transporter]] [[truck]] or truck-and-[[trailer]] combination.
+# {{lb|en|transport}} A [[lowboy]] [[trailer]].
+# {{lb|en|obsolete}} The act of [[flow]]ing; [[flux]]; [[flow]].
 #* {{RQ:Bacon Henry 7|passage=Hee being now in '''Float''' for Treasure.}}
-# A polishing block used in marble working; a runner.
+# A [[polishing]] [[block]] used in [[marble]] [[working]]; a [[runner]].
 #* {{quote-journal|en|date=April 24, 1863|work=The Building News and Engineering Journal |title=Trade News|author=|volume=10|page=324|passage=The machinery consists of two saws, a polishing table, a '''float''' for grinding marble, and a ripping saw for cutting slabs.}}
 #* {{quote-book|en|year=1925| title=Commonwealth Arbitration Reports|author=Australia. Commonwealth Court of Conciliation and Arbitration | page=557| passage=''Float Machinist''— One who squares up, faces, noses or chamfers on a '''float''' all marble, slate, or similar stones, and including terrazzo or similar compositions.}}
 #* {{quote-book|en|year=1980| title=Bulletin of the United States Bureau of Labor Statistics|author=| page=215| passage=Next , finishers rub a '''float''' — a small and smooth, rectangular piece of wood — over the entire surface, carefully avoiding edges and joints.}}
 #* {{quote-book|en|year=2015| title=Materials for Construction and Civil Engineering|author=M. Clara Gonçalves, ‎Fernanda Margarido | page=102| passage=Floated: Obtained by successive passages with a wooden '''float''' on the coat's surface until it is flat and uniform }}
-# {{lb|en|UK|dated}} A [[coal]] [[cart]]<ref>{{R:Simmonds Trade}}</ref>.
-# A [[breakdancing]] [[move]] in which the body is held [[parallel]] to the floor while balancing on one or both hands.
-# {{lb|en|computing}} A [[visual]] [[style]] on a [[web page]] that causes the styled [[element]]s to float above or beside others.
+# {{lb|en|UK|dated}} A [[coal]] [[cart]].<ref>{{R:Simmonds Trade}}</ref>
+# A [[breakdancing]] [[move]] in which the body is held [[parallel]] to the [[floor]] while [[balance|balancing]] on one or both [[hand]]s.
+# {{lb|en|computing}} A [[visual]] [[style]] on a [[web page]] that causes the styled [[element]]s to [[#Verb|float]] [[above]] or [[beside]] others.
 #* '''2004''', Eric A. Meyer, ''More Eric Meyer on CSS'' (page 36)
 #*: Because margin '''floats''' don't collapse together, the actual spacing between two '''floats''' sitting next to each other will be 6 pixels {{...}}
 #* '''2007''', Michael Bowers, ''Pro CSS and HTML Design Patterns'' (page 93)
 #*: When a '''float''' cannot fit next to another float, it moves down below it. A float's position, size, padding, borders, and margins affect the position of adjacent floats and adjacent inline content.
-# {{lb|en|biology}} The gas-filled sac, bag or body of a [[siphonophore]]; a [[pneumatophore]].
+# {{lb|en|biology}} The [[gas]]-[[filled]] [[sac]], [[bag]]{{,}} or [[body]] of a [[siphonophore]]; a [[pneumatophore]].
 
 ====Synonyms====
 * {{sense|shares offered to the public}} {{l|en|initial public offering}}
