t+hu:[[küzdelem]] ([[WT:EDIT|Assisted]]) <fight#67658282>

--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -607,6 +607,7 @@ From {{inh|en|enm|fight}}, {{m|enm|feyght}}, {{m|enm|fiȝt}}, {{m|enm|fecht}}, f
 * French: {{t+|fr|combativité|f}}
 * German: {{t+|de|Streit|m}}
 * Hebrew: {{t+|he|מַאֲבָק|m|tr=ma'avák}}
+* Hungarian: {{t+|hu|küzdelem}}
 * Norwegian:
 *: Bokmål: {{t+|nb|kamp|m}}
 * Persian: {{t+|fa|نزاع|tr=nezâ'}}, {{t+|fa|کشمکش|tr=kešmakeš}}
