--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -89,8 +89,7 @@ Noun from {{inh|en|enm|pul}}, {{m|enm|pull}}, {{m|enm|pulle}}, from the verb {{m
 #*: Danny '''pulled''' at his beer and thought for a moment.
 # {{lb|en|rail transportation|US|of a railroad car}} To [[pull out]] from a [[yard]] or [[station]]; to [[leave]].
 # {{lb|en|now|chiefly|Scotland|England|and|US|_|regional}} To [[pluck]] or [[pick]] (flowers, fruit etc.).
-#*'''1751''', {{w|Tobias Smollett}}, ''The Adventures of Peregrine Pickle'', I.19:
-#*:He and some of his companions one day entered a garden in the suburbs, and having indulged their appetites, desired to know what satisfaction they must make for the fruit they had '''pulled'''.
+#* {{RQ:Smollett Peregrine Pickle|volume=I|19|text=He and some of his companions one day entered a garden in the suburbs, and having indulged their appetites, desired to know what satisfaction they must make for the fruit they had '''pulled'''.}}
 
 ====Synonyms====
 * {{sense|apply force to (something) so it comes toward}} {{l|en|drag}}, {{l|en|tow}}, {{l|en|tug}}, {{l|en|yank}}
