--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -63,6 +63,7 @@ From {{der|en|enm|Israel}}, from {{der|en|ang|-}}, borrowed from {{der|en|la|Isr
 
 ====Translations====
 {{trans-top|id=Q801|the state}}
+* Abkhaz: {{t|ab|Ауриатәыла}}
 * Adyghe: {{t|ady|Исраил}}
 * Albanian: {{t|sq|Izrael|m}}
 * Amharic: {{t|am|እስራኤል|sc=Ethi}}
