"has a given name but is missing the normal definition" series :)))) great <旬#67851043>

--- a/en/旬/旬.16916.wikitext
+++ b/en/旬/旬.16916.wikitext
@@ -64,7 +64,25 @@ The pictographic protoform of {{zh-l|*螾}} was borrowed to represent "period of
 |kanon=しゅん
 }}
 
-===Proper noun===
+===Etymology 1===
+{{etymid|ja|しゅん}}
+{{ja-kanjitab|しゅん|yomi=o}}
+{{der+|ja|ltc|-}} {{ltc-l|旬}}.
+
+====Pronunciation====
+{{ja-pron|しゅん|acc=1|acc_ref=DJR|acc2=0|acc2_ref=DJR}}
+
+====Noun====
+{{ja-noun|しゅん|hhira=しゆん}}
+
+# [[season]] {{q|of something, as in "in season"}}
+#: {{ja-usex|'''旬'''の[[野菜]]|'''しゅん''' の やさい|in-season vegetables}}
+#: {{ja-usex|[[春]]に'''旬'''を[[迎える]]|はる に '''しゅん''' を むかえる|to be in season come spring}}
+
+===Etymology 2===
+{{ja-kanjitab|ひとし}}
+
+====Proper noun====
 {{ja-pos|proper|ひとし}}
 
 # {{given name|ja|male}}
