--- a/en/旬/旬.16916.wikitext
+++ b/en/旬/旬.16916.wikitext
@@ -78,6 +78,7 @@ The pictographic protoform of {{zh-l|*螾}} was borrowed to represent "period of
 # [[season]] {{q|of something, as in "in season"}}
 #: {{ja-usex|'''旬'''の[[野菜]]|'''しゅん''' の やさい|in-season vegetables}}
 #: {{ja-usex|[[春]]に'''旬'''を[[迎える]]|はる に '''しゅん''' を むかえる|to be in season come spring}}
+#: {{ja-usex|'''旬'''の[[ジャンル]]|'''しゅん''' の ジャンル|in-vogue genre}}
 
 ===Etymology 2===
 {{ja-kanjitab|ひとし}}
