--- a/en/坐/坐.13011.wikitext
+++ b/en/坐/坐.13011.wikitext
@@ -66,7 +66,7 @@ Cognate with {{cog|sit-jap|amdzɯ|a'''mdzɯ'''}} ({{zh-ref|Zhang, Jacques, and L
 # to [[uphold]];  to [[fight]] until the end without giving up
 #: {{zh-x|坐鎮|to [[assume]] [[personal]] [[command]]}}
 # {{zh-obsolete}} to be [[convict]]ed (of a crime)
-#* {{zh-x|3=CL|ref=[[s:zh:漢書/卷016|漢書·卷十六 高惠高后文功臣表 第四]]|元狩 元年，坐 與 淮南 王 謀反，誅。|In the first year of Yuanshou, '''convicted of''' conspiring with King of Huainan to rebel, executed.}}
+#* {{zh-x|元狩 元年，坐 與 淮南 王 謀反，誅。|In the first year of Yuanshou, '''convicted of''' conspiring with King of Huainan to rebel, executed.|CL|ref=[[s:zh:漢書/卷016|漢書·卷十六 高惠高后文功臣表 第四]]}}
 
 =====See also=====
 * {{zh-l|上|to board}}
