Updated quotation <speak#67861243>

--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -52,8 +52,8 @@ Cognate with {{cog|fy|sprekke}}, {{cog|nds|spreken|t=to speak}}, {{cog|nl|spreke
 # Of a bird, to be able to vocally reproduce words or phrases from a human language.
 #* {{quote-book|1=en|year=1936|author=Rollo Ahmed|title=The Black Art|publisher=Long|location=London|page=220|passage=Miles tremblingly confessed that it had, but to no purpose; a parrot being able to '''speak''' better in three weeks than a brazen head.}}
 # {{lb|en|transitive|archaic}} To [[address]]; to [[accost]]; to speak to.
-#* {{RQ:KJV|Ecclesiasticus|13|6|passage=[He will] thee in hope; he will '''speak''' thee fair.}}
-#* {{RQ:Emerson Threnody|page=239|passage=Each village senior paused to scan / And '''speak''' the lovely caravan.}}
+#* {{RQ:King James Version|Ecclesiasticus|13|6|passage=[He will] thee in hope; he will '''speak''' thee fair.}}
+#* {{RQ:Emerson Poems|poem=Threnody|page=239|passage=Each village senior paused to scan / And '''speak''' the lovely caravan.}}
 #* '''2013''', George Francis Dow, ''Slave Ships and Slaving'' (quoting an older text)
 #*: '''Spoke''' the ship ''Union'' of Newport, without any anchor. The next day ran down to Acra, where the windlass was again capsized and the pawls broken.
 
