--- a/en/e/et cetera.7211.wikitext
+++ b/en/e/et cetera.7211.wikitext
@@ -41,6 +41,24 @@ From {{uder|en|la|et cētera||and the [[other]] [[thing]]s; and the [[rest]] of 
 
 ----
 
+==French==
+
+===Alternative forms===
+* {{alter|fr|et cétéra|etc.}}
+
+===Etymology===
+From {{bor|fr|la|et cētera}}.
+
+===Pronunciation===
+* {{fr-IPA|ett cétéra}}
+
+===Phrase===
+{{head|fr|phrase|head=et cetera}}
+
+# [[#English|et cetera]]
+
+----
+
 ==Latin==
 
 ===Alternative forms===
@@ -53,7 +71,7 @@ From {{uder|en|la|et cētera||and the [[other]] [[thing]]s; and the [[rest]] of 
 ===Phrase===
 {{head|la|phrase|head=[[et]] [[cētera]]}}
 
-# {{l|en|et cetera}}, and the [[rest]], [[and so on]]: ''[[use]]d to [[note]] that the [[rest]] of a [[list]] or [[piece]] of [[information]] [[continue]]s in a [[similar]] or [[already]]-[[known]] [[fashion]].''
+# [[#English|et cetera]], and the [[rest]], [[and so on]]: ''[[use]]d to [[note]] that the [[rest]] of a [[list]] or [[piece]] of [[information]] [[continue]]s in a [[similar]] or [[already]]-[[known]] [[fashion]].''
 
 ===See also===
 * {{l|la|et hoc genus omne}}
@@ -74,7 +92,7 @@ Borrowed from {{bor|enm|la|et cetera}}.
 ===Phrase===
 {{head|enm|phrase|head=et cetera}}
 
-# {{l|en|et cetera}}
+# [[#English|et cetera]]
 
 ====Descendants====
 * {{desc|en|et cetera|etc.}}
@@ -112,7 +130,7 @@ Borrowed from {{bor|enm|la|et cetera}}.
 ===Phrase===
 {{head|pt|phrase|head=[[et]] [[cetera]]}}
 
-# {{l|en|et cetera}}; {{l|en|and so on}}
+# [[#English|et cetera]]; {{l|en|and so on}}
 
 ----
 
@@ -128,13 +146,12 @@ Borrowed from {{bor|enm|la|et cetera}}.
 ==Swedish==
 
 ===Alternative forms===
-* {{l|sv|etcetera}}
-* {{l|sv|etc.}}
+* {{alter|sv|etcetera|etc.}}
 
 ===Adverb===
 {{head|sv|adverb}}
 
-# {{l|en|et cetera}} (and so on)
+# [[#English|et cetera]] {{gloss|and so on}}
 
 ====Synonyms====
 * {{l|sv|och så vidare}}
