--- a/en/e/et cetera.7211.wikitext
+++ b/en/e/et cetera.7211.wikitext
@@ -44,7 +44,7 @@ From {{uder|en|la|et cētera||and the [[other]] [[thing]]s; and the [[rest]] of 
 ==French==
 
 ===Alternative forms===
-* {{alter|fr|et cétéra|etc.}}
+* {{alter|fr|et cætera|et cétéra|etc.}}
 
 ===Etymology===
 From {{bor|fr|la|et cētera}}.
