/* Derived terms */ |sucks to suck <suck#67937951>

--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -120,6 +120,7 @@ From {{inh|en|enm|souken}}, {{m|enm|suken|}}, from {{inh|en|ang|sūcan|t=to suck
 |sucky
 |sucky-sucky
 |suck a big one
+|sucks to suck
 }}
 
 ====Related terms====
