--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -48,7 +48,7 @@ The verb became irregular, possibly under the influence of the semantically simi
 #* {{quote-book|en|1852|Mrs M.A. Thompson|chapter=The Tutor's Daughter| Graham's American Monthly Magazine of Literature, Art, and Fashion| page=266| url=http://books.google.com/books?id=hdcRAAAAYAAJ| passage=In the lightness of my heart I sang '''catches''' of songs as my horse gayly bore me along the well-remembered road.}}
 #* {{quote-book|en|year=1872|author=Harriet Martineau|title=Deerbrook|page=90|passage="'Fair Enslaver!'" cried Mr. Enderby. "You must know 'Fair Enslaver:' there is not a sweeter '''catch''' than that. Come, Miss Ibbotson, begin; your sister will follow, and I&mdash;"<br>But it so happened that Miss Ibbotson had never heard 'Fair Enslaver.'}}
 # {{lb|en|obsolete}} A state of [[readiness]] to capture or seize; an [[ambush]].
-#* {{quote-book|en|1678|{{w|John Bunyan}}|The Pilgrim's Progress|section=[[wikisource:The Pilgrim's Progress/Part I/Section 3|Part I Section 3]]| passage=You lie at the '''catch''' again: this is not for edification.}}
+#* {{quote-book|en|1678|{{w|John Bunyan}}|The Pilgrim's Progress|section=[[wikisource:The Pilgrim's Progress (unsourced)/Part I/Section 3|Part I Section 3]]| passage=You lie at the '''catch''' again: this is not for edification.}}
 #* {{RQ:Fuller Church History}}
 #*: The common and the canon law {{...}} lie at '''catch''', and wait advantages one against another.
 # {{lb|en|countable|agriculture}} A [[crop]] which has [[germinate]]d and begun to grow.
