--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -285,8 +285,7 @@ From {{inh|en|enm|floten}}, from {{inh|en|ang|flotian|t=to float}}, from {{inh|e
 #: {{ux|en|That '''float''' covered in roses is very pretty.}}
 # A floating [[toy]] made of [[foam]], used in [[swimming pool]]s.
 # {{lb|en|British}} A [[small]] [[vehicle]] used for [[local]] [[delivery|deliveries]], especially in the term {{m|en|milk float}}.
-#* '''1913''', [[w:D. H. Lawrence|D.H. Lawrence]], ''[[s:Sons_and_Lovers|Sons and Lovers]]'', [[s:Sons and Lovers/Chapter VII|chapter 7]]
-#*: As soon as the skies brightened and plum-blossom was out, Paul drove off in the milkman's heavy '''float''' up to Willey Farm.
+#* {{RQ:Lawrence Sons and Lovers|passage=As soon as the skies brightened and plum-blossom was out, Paul drove off in the milkman's heavy '''float''' up to Willey Farm.|7}}
 # {{lb|en|finance}} [[funds|Funds]] [[committed]] to be [[paid]] but not yet paid.
 #: {{ux|en|Our bank does a nightly sweep of accounts, to adjust the '''float''' so we stay within our reserves limit.}}
 # {{lb|en|finance|Australia|and other Commonwealth countries?}} An [[offering]] of [[share]]s in a [[company]] (or [[unit]]s in a [[trust]]) to [[member]]s of the [[public]], normally [[followed]] by a [[listing]] on a [[stock exchange]].
