--- a/en/偋/偋.11099.wikitext
+++ b/en/偋/偋.11099.wikitext
@@ -15,10 +15,11 @@
 ===Glyph origin===
 {{Han etym}}
 
-===Pronunciation===
+===Pronunciation 1===
 {{zh-pron
 |m=bìng
-|c=bing2
+|c=bing6,beng3
+|c_note=bing6 - literary; beng3 - vernacular
 |c-t=
 |g=
 |h=pfs=;gd=biang4
@@ -33,17 +34,37 @@
 |cat=n,v
 }}
 
-===Definitions===
+====Definitions====
 {{zh-hanzi}}
 
 # {{†}} a [[secluded]] place
-# {{†}} {{zh-alt form|摒|to [[abandon]]; to [[discard]]}}
-# {{lb|zh|Hakka}} to [[hide]]
+# {{lb|zh|Hakka|Cantonese}} to [[hide]]
 #: {{zh-alt-inline|㔷}}
 
 =====Synonyms=====
 {{zh-dial|藏}}
 {{zh-dial|躲}}
+
+===Pronunciation 2===
+{{zh-pron
+|m=bìng
+|c=bing2
+|c-t=
+|g=
+|h=pfs=;gd=biang3
+|j=
+|md=
+|mn=
+|mn-t=
+|w=
+|x=
+|cat=n,v
+}}
+
+====Definitions====
+{{zh-hanzi}}
+
+# {{†}} {{zh-alt form|摒|to [[abandon]]; to [[discard]]}}
 
 ===References===
 * {{R:yue:Hanzi}}
