--- a/en/傘/傘.11179.wikitext
+++ b/en/傘/傘.11179.wikitext
@@ -32,7 +32,7 @@
 |j=san2
 |mb=sǔing
 |md=sāng
-|mn=sòaⁿ/sàn
+|mn=ml,jj,na,ha,yc,ct,zp,tw:sòaⁿ/ml,zp,tw:sàn
 |mn_note=sòaⁿ - vernacular; sàn - literary
 |mn-t=suan3
 |w=2se
