--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -532,7 +532,7 @@ From {{inh|en|enm|streight}}, {{m|enm|streght}}, {{m|enm|streiȝt}}, the past pa
 * Bulgarian: {{t|bg|кента|f}}
 * Catalan: {{t+|ca|escala|f}}
 * Chinese:
-*: Mandarin: {{t+|cmn|顺子}}
+*: Mandarin: {{t+|cmn|顺子}}, {{t+|cmn|順子|tr=shùnzi}}
 * Czech: {{t|cs|postupka|f}}
 * Dutch: {{t+|nl|straat|f}}
 * Finnish: {{t+|fi|suora}}
