--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -359,6 +359,9 @@ From {{inh|nl|dum|blont}}, from {{der|nl|fro|blond}}, {{der|nl|ML.|blondus}}, fr
 
 # {{l|en|blond}} (all senses)
 
+====Descendants====
+* {{desc|pl|blond|bor=1}}
+
 ===Further reading===
 * {{R:TLFi}}
 
@@ -411,6 +414,57 @@ From {{bor|pdt|fr|blond}}
 # [[blond]]
 
 [[Category:Plautdietsch one-syllable adjectives]]
+
+----
+
+==Polish==
+{{wp|lang=pl}}
+
+===Etymology===
+{{bor+|pl|fr|blond}}.
+
+===Pronunciation===
+{{pl-p|a=Pl-blond.ogg}}
+
+===Adjective===
+{{pl-adj|-|adv=-}}
+
+# {{lb|pl|of hair}} {{l|en|blond}}
+#: {{coi|pl|'''blond''' kolor|a '''blond''' color}}
+#: {{coi|pl|'''blond''' odcień|a '''blond''' shade}}
+#: {{coi|pl|'''blond''' modelka|a '''blond''' model}}
+#: {{coi|pl|'''blond''' piękność|a '''blond''' beauty/belle}}
+#: {{coi|pl|'''blond''' czupryna|a '''blond''' mop of hair}}
+#: {{coi|pl|'''blond''' peruka|a '''blond''' wig}}
+#: {{coi|pl|'''blond''' loki|'''blond''' curls}}
+#: {{coi|pl|'''blond''' warkocze|'''blond''' pigtails}}
+#: {{coi|pl|'''blond''' wąsy|a '''blond''' moustache}}
+#: {{coi|pl|'''blond''' włosy|'''blond''' hair}}
+#: {{coi|pl|farbowany/przefarbowany/ufarbowany na '''blond'''|dyed '''blond'''}}
+#: {{coi|pl|zrobiony na '''blond'''|made '''blond'''}}
+#: {{coi|pl|ciemny '''blond'''|dark '''blond'''}}
+#: {{coi|pl|jasny '''blond'''|light '''blond'''}}
+#: {{coi|pl|platynowy '''blond'''|platinum '''blond'''}}
+#: {{coi|pl|popielaty '''blond'''|ashy '''blond'''}}
+#: {{coi|pl|naturalny '''blond'''|natural '''blond'''}}
+#: {{coi|pl|tleniony '''blond'''|bleach '''blond'''}}
+
+====Declension====
+{{pl-decl-adj-auto}}
+
+====Derived terms====
+{{col3|pl|title=adjective|blondwłosy}}
+
+====Related terms====
+{{col3|pl|title=adjective|blondynowy}}
+{{col3|pl|title=nouns|blondas|blondasek|blondyn|blondyna|blondyneczka|blondynek|blondynka}}
+
+===References===
+<references/>
+
+===Further reading===
+* {{R:pl:WSJP}}
+* {{R:pl:PWN}}
 
 ----
 
