/* Chinese */ (Should sense #3 be separated?) <cut#68424661>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -1047,11 +1047,10 @@ From {{bor|yue|en|cut}}.
 # to [[reduce]]
 #: {{zh-x|c{}u{}t{kat1}&nbsp; b{}u{}d{bat1}g{}e{}t{zet4}|to reduce allocated budget|C}}
 # to [[enter]] a [[queue]] at the wrong place; to switch directions suddenly
-#: {{zh-x|c{}u{}t{kat1}線|to switch traffic lanes|C}}
-# to [[terminate]]; to [[end]]
+#: {{zh-x|c{}u{}t{kat1}線|to change lanes when driving|C}}
+# to [[terminate]]; to [[end]]; to [[sever]]
 #: {{zh-x|c{}u{}t{kat1}線|to end a call|C}}
 #: {{zh-x|c{}u{}t{kat1}單|to terminate an order|C}}
-
 
 [[Category:Chinese terms written in foreign scripts]]
 
