--- a/en/c/cling.6835.wikitext
+++ b/en/c/cling.6835.wikitext
@@ -23,7 +23,7 @@ From {{inh|en|enm|clingen}}, from {{inh|en|ang|clingan|t=to adhere}}, from {{inh
 # {{senseid|en|hold tightly}}To [[hold]] very [[tight]]ly, as to not fall off.
 #: {{syn|en|clinch|grip|Thesaurus:grasp}}
 #: {{ux|en|Seaweed '''clung''' to the anchor.}}
-#* '''2017,''' {{w|Jennifer S. Holland}}, ''For These Monkeys, It’s a Fight for Survival.'', National Geographic (March 2017)[http://www.nationalgeographic.com/magazine/2017/03/macaques-monkeys-indonesia-endangered-pet-trade/]
+#* '''2017,''' Jennifer S. Holland, ''For These Monkeys, It’s a Fight for Survival.'', National Geographic (March 2017)[http://www.nationalgeographic.com/magazine/2017/03/macaques-monkeys-indonesia-endangered-pet-trade/]
 #*: Cartoonish, wide-eyed infants '''cling''' to their mothers or play together low to the ground.
 #* {{quote-book|en|1823|Felicia Dorothea Browne Hemans|The Vespers of Palermo| https://www.worldcat.org/title/vespers-of-palermo-a-tragedy-in-5-acts/oclc/722355055|| And what hath life for thee / That thou shouldst '''cling''' to it thus?|section=Act the First}}
 # To [[adhere]] to an object, without being [[affix]]ed, in such a way as to follow its [[contour]]s. Used especially of [[fabric]]s and [[film]]s.
