/* Glyph origin */ incomprehensible without prior knowledge + irrelevant to etymology <旡#68429093>

--- a/en/旡/旡.16906.wikitext
+++ b/en/旡/旡.16906.wikitext
@@ -22,9 +22,7 @@
 
 ===Glyph origin===
 {{Han etym}}
-{{liushu|p}} – a kneeling figure turning around with mouth open. Compare: {{zh-l|*欠}}, showing another open-mouthed but front-facing figure. This character can be easily confused with 无.
-
-Note the stroke order, which may not be clear in derived characters: the left vertical and second horizontal are one stroke with a corner, while the upper right vertical continues in a diagonal stroke to lower left.
+{{liushu|p}} – a kneeling figure turning around with mouth open. Compare: {{zh-l|*欠}}, showing another open-mouthed but front-facing figure.
 
 ===Etymology 1===
 
