--- a/en/f/feel.6876.wikitext
+++ b/en/f/feel.6876.wikitext
@@ -503,13 +503,22 @@ From {{bor|yue|en|feel}}.
 ===Pronunciation===
 {{zh-pron
 |c=fiu1
-|cat=n
+|cat=n,v
 }}
 
 ===Noun===
-{{zh-noun}}
+{{head|zh|noun}}
 
-# {{lb|zh|Hong Kong Cantonese}} Emotional attraction or desire.
+# {{lb|zh|Hong Kong Cantonese}} emotional attraction or desire
+#: {{zh-x|佢 好似 對 你 有 '''f{}e{}e{}l{fiu1}''' 喎{wo3}。|He seems to have some '''feelings''' for you.|C}}
+
+===Verb===
+{{head|zh|verb}}
+
+# {{lb|zh|Hong Kong Cantonese}} to sense
+#: {{zh-x|有 冇 人 '''f{}e{}e{}l{fiu1}''' 到{dou3-2} 有 地震？|Could anyone '''feel''' the earthquake?|C}}
+# {{lb|zh|Hong Kong Cantonese}} to experience or understand the mental state of others
+#: {{zh-x|我 '''f{}e{}e{}l{fiu1}''' 到{dou3-2} 佢 做嘢 好 畀心機。|I '''could tell''' that he has devoted a lot of effort into his work.|C}}
 
 ===See also===
 * [[feel到]]
