--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -19,31 +19,32 @@ The verb became irregular, possibly under the influence of the semantically simi
 {{en-noun|~}}
 
 # {{lb|en|countable}} The act of [[seizing]] or [[capture|capturing]].
-#: ''The '''catch''' of the perpetrator was the product of a year of police work.''
+#: {{ux|en|The '''catch''' of the perpetrator was the product of a year of police work.}}
 # {{lb|en|countable}} The act of catching an [[object]] in motion, especially a [[ball]].
-#: ''The player made an impressive '''catch'''.''
-#: ''Nice '''catch'''!''
+#: {{ux|en|The player made an impressive '''catch'''.}}
+#: {{ux|en|Nice '''catch'''!}}
 # {{lb|en|countable}} The act of noticing, [[understand]]ing or hearing.
-#: ''Good '''catch'''. I never would have remembered that.''
+#: {{ux|en|Good '''catch'''. I never would have remembered that.}}
 #* '''2008''', John I. Carney, ''Soapstone'' (page 74)
-#*: “In that case,” said Jeff, “I just thought of something else we need.” He walked over to one of the stations that was selling household goods and bought a can opener.<br>“Nice '''catch''',” said Lucy.
-# {{lb|en|uncountable}} The game of catching a ball.
-#: ''The kids love to play '''catch'''.''
-# {{lb|en|countable}} Something which is captured or caught.
-#: ''The fishermen took pictures of their '''catch'''.''
-#: ''The '''catch''' amounted to five tons of swordfish.''
+#*: "In that case," said Jeff, "I just thought of something else we need." He walked over to one of the stations that was selling household goods and bought a can opener.<br>"Nice '''catch'''," said Lucy.
+# {{lb|en|uncountable}} The game of [[#Verb|catch]]ing a ball.
+#: {{ux|en|The kids love to play '''catch'''.}}
+# {{lb|en|countable}} Something which is [[capture]]d or [[#Verb|caught]].
+#: {{ux|en|The fishermen took pictures of their '''catch'''.}}
+#: {{ux|en|The '''catch''' amounted to five tons of swordfish.}}
 # {{lb|en|countable|colloquial|by extension}} A [[find]], in particular a [[boyfriend]] or [[girlfriend]] or prospective [[spouse]].
-#: ''Did you see his latest '''catch'''?''
-#: ''He's a good '''catch'''.''
+#: {{ux|en|Did you see his latest '''catch'''?}}
+#: {{ux|en|He's a good '''catch'''.}}
+#* {{quote-book|en|date=10 July 2014|author=Jocelyn Samara D.|title={{w|Rain (webcomic)|Rain}}|section=Comic 561 - A '''Catch'''|sectionurl=https://rain.thecomicseries.com/comics/561|format=webcomic|text="Aaaugh!  Just once, I wish I could be considered a '''catch''' by men younger than fifty..."}}
 # {{senseid|en|mechanism}} {{lb|en|countable}} A stopping [[mechanism]], especially a [[clasp]] which stops something from [[open]]ing.
-#: ''She installed a sturdy '''catch''' to keep her cabinets closed tight.''
-# {{lb|en|countable}} A [[hesitation]] in voice, caused by strong emotion.
-#: ''There was a '''catch''' in his voice when he spoke his father's name.''
+#: {{ux|en|She installed a sturdy '''catch''' to keep her cabinets closed tight.}}
+# {{lb|en|countable}} A [[hesitation]] in [[voice]], caused by [[strong]] [[emotion]].
+#: {{ux|en|There was a '''catch''' in his voice when he spoke his father's name.}}
 # {{lb|en|countable|sometimes|_|noun adjunct}} A concealed [[difficulty]], especially in a [[deal]] or [[negotiation]].
-#: ''It sounds like a great idea, but what's the '''catch'''?''
-#: ''Be careful, that's a '''catch''' question.''
-# {{lb|en|countable}} A [[crick]]; a sudden muscle pain during unaccustomed positioning when the muscle is in use.
-#: ''I bent over to see under the table and got a '''catch''' in my side.''
+#: {{ux|en|It sounds like a great idea, but what's the '''catch'''?}}
+#: {{ux|en|Be careful, that's a '''catch''' question.}}
+# {{lb|en|countable}} A [[crick]]; a [[sudden]] [[muscle]] [[pain]] during [[unaccustomed]] [[positioning]] when the muscle is [[in use]].
+#: {{ux|en|I bent over to see under the table and got a '''catch''' in my side.}}
 # {{lb|en|countable}} A [[fragment]] of [[music]] or [[poetry]].
 #* {{quote-book|en|1852|Mrs M.A. Thompson|chapter=The Tutor's Daughter| Graham's American Monthly Magazine of Literature, Art, and Fashion| page=266| url=http://books.google.com/books?id=hdcRAAAAYAAJ| passage=In the lightness of my heart I sang '''catches''' of songs as my horse gayly bore me along the well-remembered road.}}
 #* {{quote-book|en|year=1872|author=Harriet Martineau|title=Deerbrook|page=90|passage="'Fair Enslaver!'" cried Mr. Enderby. "You must know 'Fair Enslaver:' there is not a sweeter '''catch''' than that. Come, Miss Ibbotson, begin; your sister will follow, and I&mdash;"<br>But it so happened that Miss Ibbotson had never heard 'Fair Enslaver.'}}
