--- a/en/備/備.11180.wikitext
+++ b/en/備/備.11180.wikitext
@@ -49,6 +49,7 @@ Area word; compare {{cog|my|ပြင်||to get ready; to prepare}}, {{cog|kac|
 # to [[complete]] [[perfection]]
 #* {{zh-x|居 惡{wū} 在。仁 是 也。路 惡 在。義 是 也。居-仁 由-義、大人 之 事-備 矣。|Wherever you dwell, make it Humane; whatever course you travel, make it Just. Abiding in humaneness and acting through fairness—this is how the great man '''completes''' his work|ref=Mengzi}}
 # [[completeness]]
+#* {{zh-x|周-公 謂 ^魯-公 曰：「君子 不 施{chí} 其 親，不 使 大臣 怨 乎 不 以。故舊，無 大-故，則 不 棄 也。無 求 備 於 一人。」|The {{w|Duke of Zhou}} said to {{w|Bo Qin|Duke of Lu}}: "The gentleman does not neglect his kinsmen, does not make the great ministers grudge over being not used, and certainly does not reject old friends without great causes. Neither does he not seek '''perfection''' in one man."|ref=Lunyu}}
 
 ====Compounds====
 {{zh-der|不備|乘人不備|乘其不備|俱備|備件|備份|備位|備取|備受好評|備受威脅|備受矚目|備受禮遇|備品|備嘗憂患|備嘗艱苦|備嘗辛苦|備妥|備安庫|備家|備役|備忘錄|備悉|備戰|備料|備查|備案|備注|備用|備用品|備用車胎|備禦|備細|備考|備而不用|備耕|備胎|備荒|備補|備言|備註|備詢|備身府|備辦|備陳|備馬|儲備|儲備幹部|儲備銀行|內備|兵備|具備|兼備|冷氣設備|出其不備|劉備|劉備失箸|吉備真備|周備|周邊設備|國際準備|圓備|報備|夜視設備|守備|守備率|完備|常備不懈|常備兵|常備兵役|常備軍|後備|後備軍人|德容兼備|德才兼備|必備|戒備|戰備|戰備跑道|才德兼備|排備|推崇備至|掩其不備|掩其無備|揚揚無備|攻其不備|攻其無備|整備|文修武備|文武兼備|有備無患|有備而來|材能兼備|核備|機器設備|武備|毫不為備|求備|求全責備|消防設備|準備|準備金|火備|無一不備|百廢備舉|空調設備|籌備|置備|美備|聊備一格|聊復備數|自備|衛浴設備|衛生設備|裝備|製備|設備|該備|謀勇兼備|警備|警備區|警備森嚴|豫備|責備|貯備|購備|趁人不備|軍備|辦備|配備|醇備|野戰裝備|鑒核備查|關懷備至|防備|防火設備|隄備|電化設備|電氣設備|預備|預備役|預備金|養兒備老|齊備|全備}}
