--- a/en/備/備.11180.wikitext
+++ b/en/備/備.11180.wikitext
@@ -30,7 +30,7 @@ Area word; compare {{cog|my|ပြင်||to get ready; to prepare}}, {{cog|kac|
 |m=bèi
 |c=bei6
 |j=bei3
-|h=pfs=pi
+|h=pfs=phi;gd=pi4
 |md=bê
 |mn=ml,jj,tw:pī
 |mn-t=bi6
