t+iu:[[pâk]] ([[WT:EDIT|Assisted]]) <fight#68471831>

--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -120,6 +120,7 @@ Cognate with {{cog|sco|fecht||to fight}}, {{cog|fy|fjochtsje}}, {{m|fy|fjuchte||
 * Hungarian: {{t+|hu|harcol}}, {{t+|hu|verekszik}}
 * Icelandic: {{t+|is|slást}}, {{t+|is|berjast}}
 * Indonesian: {{t+|id|kelahi}}, {{t+|id|tarung}}
+* Inuktitut: {{t|iu|pâk}}
 * Irish: {{t|ga|troid}}, {{t|ga|comhraic}}, {{t|ga|bruíon}}
 * Italian: {{t+|it|lottare}}, {{t+|it|azzuffarsi}}, {{t+|it|battersi}}
 * Japanese: {{t+|ja|喧嘩|tr=けんかする, kenka suru|sc=Jpan|alt=喧嘩する}}, {{t|ja|対決|tr=たいけつする, taiketsu suru|sc=Jpan|alt=対決する}}, {{t+|ja|戦う|tr=たたかう, tatakau|sc=Jpan}}, {{t+|ja|闘う|tr=たたかう, tatakau|sc=Jpan}}
