--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -109,6 +109,7 @@ Compare {{m|en|astound}}, {{m|en|astonish}}, {{m|en|stun}}. Germanic cognates in
 *: Min Dong: {{t|cdo|雷公|tr=lài-gŭng}}
 *: Min Nan: {{t+|nan|雷|tr=lûi}}, {{t+|nan|雷公|tr=lûi-kong}}
 *: Wu: {{t|wuu|雷|tr=le}}
+* Chuvash: {{t|cv|аслати}}
 * Czech: {{t+|cs|hrom|m}}, {{t|cs|zahřmění|n}}
 * Dalmatian: {{t|dlm|tun|m}}
 * Danish: {{t+|da|torden|c}}
@@ -146,6 +147,7 @@ Compare {{m|en|astound}}, {{m|en|astonish}}, {{m|en|stun}}. Germanic cognates in
 * Javanese: {{t|jv|bledhèg}}, {{t+|jv|gludhug}}
 * Kazakh: {{t+|kk|күн күркіреу}}, {{t|kk|күркіреу}}
 * Khmer: {{t+|km|ផ្គរ|tr=pkɔɔ}}
+* Komi-Zyrian: {{t|kpv|гым}}
 * Korean: {{t|ko|우레}}, {{t+|ko|천둥}}
 * Kott: {{t|zko|ajak}}
 * Kurdish:
@@ -232,6 +234,7 @@ Compare {{m|en|astound}}, {{m|en|astonish}}, {{m|en|stun}}. Germanic cognates in
 * Turkmen: {{t|tk|ýyldyrym}}
 * Tutelo: {{t|tta|tuhangrua}}
 * Tuvan: {{t|tyv|диңмирээшкин}}
+* Udmurt: {{t|udm|гудыри}}
 * Ugaritic: {{t|uga|𐎗𐎓𐎚}}
 * Ukrainian: {{t|uk|грім|m}}
 * Urdu: {{t|ur|گرج|tr=garaj}}, {{t|ur|گڑگڑاہٹ|tr=gaṛgaṛāhaṭ}}
