--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -176,6 +176,7 @@ Compare {{m|en|astound}}, {{m|en|astonish}}, {{m|en|stun}}. Germanic cognates in
 * Maranao: {{t|mrw|dalendeg}}, {{t|mrw|rogong}}
 * Mari:
 *: Eastern Mari: {{t|chm|кӱдырчӧ}}
+*: Western Mari: {{t|mrj|хӹдӹртӹш}}
 * Mon: {{t|mnw|ဓဂဵု}}
 * Mongolian: {{t+|mn|аянга}}
 * Nanai: {{t|gld|агди}}
