--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -705,8 +705,8 @@ Adjective sense of "drunk" (now rare and now usually used in the originally jocu
 #* {{RQ:Knolles Turkes}}
 #*: which great '''cut''' or ditch Sesostris {{...}} purposed to have made a great deale wider and deeper.
 ## An artificial [[navigation]] [[channel]] as distinguished from a [[navigable]] [[river]]
-# A [[share]] or [[portion]].
-#: {{ux|en|The lawyer took a '''cut''' of the profits.}}
+# A [[share]] or [[portion]] of [[profit]]s.
+#: {{ux|en|The bank robbers disbanded after everyone got their '''cut''' of the money.}}
 #* {{quote-journal|en|journal=Time|title=Inside Epic's Unreal Engine 5|author=Andrew R. Chow|date=April 6 2022
 |passage=Starting today, UE5 is free to download and use, with Epic taking a 5% '''cut''' on products created with it only after they earn over $1 million in gross revenue.
 |url=https://time.com/6164332/epic-unreal-engine-5-launch/}}
