--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -67,6 +67,7 @@ Cognate with {{cog|sco|fecht||to fight}}, {{cog|fy|fjochtsje}}, {{m|fy|fjuchte||
 | fight shy of
 | fight the good fight
 | fight tooth and nail
+| fight windmills
 | infight
 }}
 
