--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -328,6 +328,7 @@ The meaning of ''to ejaculate'' is considered vulgar slang. Many style guides an
 * Sinhalese: {{tt|si|එනවා|sc=Sinh}}
 * Slovak: {{tt|sk|prichádzať|impf}}, {{tt|sk|prísť|pf}}
 * Slovene: {{tt+|sl|priti|pf}}
+* Somali: {{t|so|imasho}}
 * Sorbian:
 *: Lower Sorbian: {{tt|dsb|pśiś}}, {{tt|dsb|póraś|impf|alt=se póraś}}
 * Southern Altai: {{tt|alt|келер}}
