t+so:[[jiidid]] ([[WT:EDIT|Assisted]]) <pull#68498457>

--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -244,6 +244,7 @@ Noun from {{inh|en|enm|pul}}, {{m|enm|pull}}, {{m|enm|pulle}}, from the verb {{m
 *: Roman: {{t+|sh|potezati|impf}}, {{t+|sh|potegnuti|pf}}
 * Slovak: {{t|sk|tiahnuť|impf}}, {{t|sk|ťahať|impf}}, {{t|sk|potiahnuť|pf}}
 * Slovene: {{t|sl|tegniti}}
+* Somali: {{t|so|jiidid}}
 * Sorbian:
 *: Lower Sorbian: {{t|dsb|śěgnuś|impf}} {{qualifier|continuative}}, {{t|dsb|śěgaś|impf}} {{qualifier|frequentative}}
 * Spanish: {{t+|es|tirar}}, {{t+|es|jalar}}
