--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -215,6 +215,7 @@ Compare {{m|en|astound}}, {{m|en|astonish}}, {{m|en|stun}}. Germanic cognates in
 * Sinhalese: {{t|si|විදුලි කෙටීම}}
 * Slovak: {{t+|sk|hrom|m}}
 * Slovene: {{t+|sl|grom|m}}, {{t|sl|grmenje|n}}
+* Somali: {{t|so|onkod}}
 * Sorbian:
 *: Upper Sorbian: {{t|hsb|hrimanje|n}}
 * Spanish: {{t+|es|trueno|m}}
