--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -74,8 +74,7 @@ From {{inh|en|enm|streight}}, {{m|enm|streght}}, {{m|enm|streiȝt}}, the past pa
 #: {{ux|en|a '''straight''' ballot}}
 # {{lb|en|colloquial}} [[conventional|Conventional]], [[mainstream]], socially acceptable. {{defdate|from 20<sup>th</sup>c.}}
 #* {{quote-web|en|date=1971-03-18|title=Don Eyles: Extra! Weird-Looking Freak Saves Apollo 14!|author=Timothy Crouse|work=Rolling Stone|url=https://www.rollingstone.com/politics/politics-news/don-eyles-extra-weird-looking-freak-saves-apollo-14-40737/|passage=Although Eyles, the minor celebrity, is respected by his co-workers, he looks out of place among the dozens of short-haired, short-sleeved technocrats who man the Lab. “No doubt about it,” he says, “there are an awful lot of people around here you’d have to call '''straight'''.”}}
-#* {{quote-song|en|year=1994|lyricist=Jarvis Cocker|artist=Pulp
-|title=Do You Remember the First Time?|album=His ‘n’ Hers||passage=You say you've got to go home / Well at least there's someone there that you can talk to / And you never have to face up to the night on your own / Jesus, it must be great to be '''straight'''}}
+#* {{quote-song|en|year=1994|lyricist=Jarvis Cocker|artist=Pulp|title=Do You Remember the First Time?|album=His ‘n’ Hers||passage=You say you've got to go home / Well at least there's someone there that you can talk to / And you never have to face up to the night on your own / Jesus, it must be great to be '''straight'''}}
 #* '''1998''', Eileen Fitzpatrick & Dominic Pride, ''[[w:Billboard (magazine)|Billboard]]'', 17 October 1998:
 #*: ‘Her last album was a bit too '''straight''',’ he says, ‘but this one puts her in a more contemporary framework and softens her music.’
 #* {{quote-book|en|author=Tracy Quan|authorlink=Tracy Quan|title=Diary of a Manhattan Call Girl: A Novel|location=New York, N.Y.|publisher=[[w:Crown Publishing Group|Crown Publishers]]|year=2007|isbn=978-0-307-42056-5|passage="When you say he's a '''straight''' guy, you mean{{nb...}}?" I held up my left hand as if it were a shield and spun my ring around. I told her: "He works on Wall Street.{{...}}He wouldn't understand my business. He's always had a '''straight''' job. His entire life he's been so&nbsp;– so normal that he doesn't even know how normal he is.{{...}}He doesn't know I'm a hooker. I'm pretending to be a '''straight''' chick. And it's working! And that makes him a '''straight''' guy. It's&nbsp;... I feel like Dr. Frankenhooker."}}
@@ -95,6 +94,9 @@ From {{inh|en|enm|streight}}, {{m|enm|streght}}, {{m|enm|streiȝt}}, the past pa
 #* '''2015''', Cara Bergstrom-Lynch, ''Lesbians, Gays, and Bisexuals Becoming Parents or Remaining Childfree: Confronting Social Inequalities'', Lexington Books ({{ISBN|9781498521970}}), page 6:
 #*: What was possible family-wise was fairly limited, though many gays, lesbians, and bisexuals had children in '''straight''' relationships and then came out.
 #* {{seemoreCites|en}}
+# {{lb|en|sex work}} Related to conventional [[sexual intercourse]].
+#: {{cot|en|French}}
+#* {{RQ:Mezzrow Blues|page=23|passage=“That coffee-an’ mac you got,” a French girl would crack to a '''straight''' one, and then it was on—hair came out by the handful, some bleached and some unbleached.}}
 # {{lb|en|colloquial}} Not using [[alcohol]], [[drug]]s, ''etc.'' {{defdate|from 20<sup>th</sup>c.}}
 #: {{syn|en|straightedge}}
 #* '''1989''', {{w|Gus Van Sant}}, ''{{w|Drugstore Cowboy}}'':
