--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -598,6 +598,10 @@ From {{inh|en|enm|streight}}, {{m|enm|streght}}, {{m|enm|streiȝt}}, the past pa
 # {{lb|de|colloquial}} {{l|en|straight|id=directly; without pause, delay or detour}}, [[directly]]
 #* {{quote-song|de|year=2021|artist=CRO feat. Capital Bra|title=BLESSED|album=trip|text=Und sie staunt nicht schlecht, ja, sie checkt / Dass man '''straight''' aus'm Bett ins Meer springen kann, oh yeah|t=And she's impressed, yeah, she gets / That you can jump '''straight''' from your bed into the ocean, oh yeah}}
 
+===Further reading===
+* {{R:DWDS}}
+* {{R:Duden}}
+
 ----
 
 ==Portuguese==
