t+sid:[[banqo]] t-balance ([[WT:EDIT|Assisted]]) <thunder#68535428>

--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -164,9 +164,9 @@ Compare {{m|en|astound}}, {{m|en|astonish}}, {{m|en|stun}}. Germanic cognates in
 * Macedonian: {{t+|mk|гром|m}}
 * Maguindanao: {{t|mdh|dalendeg}}
 * Malagasy: {{t+|mg|ampy}}
-{{trans-mid}}
 * Malay: {{t|ms|guruh}}, {{t|ms|guntur}}
 * Malayalam: {{t+|ml|ഇടി}}
+{{trans-mid}}
 * Maltese: {{t|mt|ragħad|m}}
 * Manchu: {{t|mnc|ᠠᡴᠵᠠᠨ}}
 * Mansaka: {{t|msk|rugung}}
@@ -212,6 +212,7 @@ Compare {{m|en|astound}}, {{m|en|astonish}}, {{m|en|stun}}. Germanic cognates in
 *: Cyrillic: {{t|sh|гром|m}}, {{t|sh|грмљавина|f}}
 *: Roman: {{t+|sh|grom|m}}, {{t+|sh|grmljavina|f}}
 * Sicilian: {{t+|scn|tronu|m}}
+* Sidamo: {{t|sid|banqo}}
 * Sinhalese: {{t|si|විදුලි කෙටීම}}
 * Slovak: {{t+|sk|hrom|m}}
 * Slovene: {{t+|sl|grom|m}}, {{t|sl|grmenje|n}}
