--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -28,7 +28,7 @@ Noun from {{inh|en|enm|pul}}, {{m|enm|pull}}, {{m|enm|pulle}}, from the verb {{m
 #: {{ux|en|'''pull''' flax}}
 #: {{ux|en|'''pull''' a finch}}
 # {{lb|en|transitive}} To [[attract]] or [[net]]; to [[pull in]].
-#* '''2002''', {{w|Marcella Ridlen Ray}}, ''Changing and Unchanging Face of United States Civil Society''
+#* '''2002''', Marcella Ridlen Ray, ''Changing and Unchanging Face of United States Civil Society''
 #*: Television, a favored source of news and information, '''pulls''' the largest share of advertising monies.
 #* '''2011''', Russell Simmons, ‎Chris Morrow, ''Super Rich: A Guide to Having It All''
 #*: While the pimp can always '''pull''' a ho with his magnetism, he can never '''pull''' a nun. The nun is too in touch with her own compassionate and honest spirit to react to a spirit as negative and deceitful as that of the pimp.
