--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -377,7 +377,7 @@ Noun from {{inh|en|enm|pul}}, {{m|enm|pull}}, {{m|enm|pulle}}, from the verb {{m
 #*{{quote-book|en|1882|H. Elliott McBride|Well Fixed for a Rainy Day|passage=Heah , Sam Johnsing , jis' take a '''pull''' at dis bottle, an' it will make yo' feel better .}}
 #* {{quote-book|en|year=1996|author=Jon Byrell|title=Lairs, Urgers and Coat-Tuggers| publisher=Ironbark| location=Sydney| page=294| passage=Sutho took a '''pull''' at his Johnny Walker and Coke and laughed that trademark laugh of his and said: `Okay. I'll pay that all right.'}}
 # {{lb|en|cricket}} A type of stroke by which a leg ball is sent to the off side, or an off ball to the on side; a [[pull shot]].
-#* '''1887''', {{w|R. A. Proctor}}, ''Longman's Magazine''
+#* '''1887''', R. A. Proctor, ''Longman's Magazine''
 #*: The '''pull''' is not a legitimate stroke, but bad cricket.
 # {{lb|en|golf}} A mishit shot which travels in a straight line and (for a right-handed player) left of the intended path.
 # {{lb|en|printing|historical}} A single [[impression]] from a [[handpress]].
