--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -203,6 +203,7 @@ From {{inh|en|enm|bewteful}}, {{m|enm|beautefull||attractive to the eye, beautif
 *: Roman: {{t+|sh|lȇp}}, {{t+|sh|lijȇp}}, {{t|sh|lip}}
 * Shan: {{t+|shn|ႁၢင်ႈလီ}}
 * Sicilian: {{t+|scn|beddu|m}}, {{t+|scn|bedda|f}}
+* Sidamo: {{t|sid|xuʼma}}
 * Sinhalese: {{t+|si|ලස්සන|sc=Sinh}}, {{t|si|සුන්දර|sc=Sinh}}
 * Slovak: {{t|sk|krásny}}, {{t|sk|pekný}}
 * Slovene: {{t+|sl|lep}}
