--- a/en/f/feel.6876.wikitext
+++ b/en/f/feel.6876.wikitext
@@ -386,7 +386,7 @@ From {{inh|en|enm|felen}}, from {{inh|en|ang|fÄ“lan}}, from {{inh|en|gmw-pro|*fÅ
 #* '''2010''', Nathan Bowers, ''4-H Guide to Training Horses'' (page 111)
 #*: The unshanked snaffle bit is good for bending and getting a horse used to the '''feel''' of a bit.
 # A [[vague]] [[mental]] [[impression]].
-#: ''You should get a '''feel''' of the area before moving in.''
+#: ''You should get a '''feel''' for the area before moving in.''
 #* {{quote-book
 |en
 |year=2010
