--- a/en/p/push.8439.wikitext
+++ b/en/p/push.8439.wikitext
@@ -169,6 +169,7 @@ From {{inh|en|enm|pushen}}, {{m|enm|poshen}}, {{m|enm|posson}}, borrowed from {{
 * Occitan: {{t+|oc|butar}}, {{t+|oc|empénher}}
 * Old English: {{t|ang|scūfan}}
 * Old Javanese: {{t|kaw|tulak}}
+* Oromo: {{t|om|dhiibuu}}
 * Pashto: {{t+|ps|خچل|tr=xačǝ́l}}, {{t+|ps|ټېل وهل|tr=ṭel wahᶕl}}
 * Persian: {{t|fa|هل دادن|tr=hol dâdan|sc=fa-Arab}}
 * Polish: {{t+|pl|pchać|impf}}, {{t+|pl|pchnąć|pf}}, {{t+|pl|popchnąć|pf}}
