t+sva:[[აშხალ]] t+xmf:[[ჸა]] ([[WT:EDIT|Assisted]]) <branch#68556730>

--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -177,6 +177,7 @@ The verb is from {{inh|en|enm|braunchen}}, from the noun.
 * Maranao: {{t|mrw|sanga}}
 * Middle English: {{t|enm|braunche}}
 {{trans-mid}}
+* Mingrelian: {{t|xmf|ჸა}}
 * Miyako: {{t|mvi|枝|tr=ゆだ, yuda}}
 * Mongolian: {{t+|mn|мөчир|sc=Cyrl}}
 * Nahuatl: {{t|nah|cuauhmaitl}}
@@ -222,6 +223,7 @@ The verb is from {{inh|en|enm|braunchen}}, from the noun.
 * Slovak: {{t|sk|vetva|f}}, {{t+|sk|konár}}
 * Slovene: {{t+|sl|veja|f}}
 * Spanish: {{t+|es|rama|f}}
+* Svan: {{t|sva|აშხალ}}
 * Swahili: {{t+|sw|tanzu}}
 * Swedish: {{t+|sv|gren|c}}
 * Tagalog: {{t|tl|sanga}}
