--- a/en/春/春.16973.wikitext
+++ b/en/春/春.16973.wikitext
@@ -102,6 +102,9 @@ Possibly from {{inh|zh|sit-pro|*d(w)əj||egg; testicle}} ({{zh-ref|Baxter and Sa
 # {{lb|zh|Cantonese|vulgar}} [[testicle]]
 # {{lb|zh|Cantonese|vulgar}} [[goddamn]], [[the hell]]
 #: {{zh-x|你 搞 乜 春 呀？|What the fuck are you doing?|C}}
+# {{lb|zh|Cantonese|colloquial}} [[nothing]]; [[damn all]]; [[jack shit]]; [[bugger all]] {{zh-mw|條}}
+#: {{zh-syn|*毛|*鐵}}
+#: {{zh-x|你 識 條 鐵 咩？|Do you know anything at all?}}
 # {{lb|zh|Cantonese|vulgar}} {{n-g|negates the meaning of the sentence}}
 #: {{zh-x|關 你 春 事！|None of your damn business!|C}}
 
