--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -228,6 +228,7 @@ Noun from {{inh|en|enm|pul}}, {{m|enm|pull}}, {{m|enm|pulle}}, from the verb {{m
 * Norwegian: {{t+|no|trekke}}, {{t+|no|dra}}
 * Occitan: {{t+|oc|tirar}}
 * Old Javanese: {{t|kaw|tarik}}
+* Oromo: {{t|om|harkisuu}}
 * Pashto: {{t|ps|چېوهل|tr=čewahǝ́l}}, {{t|ps|کشول|tr=kašawᶕl}}
 * Persian: {{t+|fa|کشیدن|tr=kešidan|sc=fa-Arab}}
 * Polish: {{t+|pl|ciągnąć|impf}}, {{t+|pl|pociągnąć|pf}}
