t+om:[[hooqqisiisuu]] t-balance ([[WT:EDIT|Assisted]]) <vomit#68569510>

--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -107,8 +107,8 @@ From {{inh|en|enm|vomiten}}, from {{der|en|la|vomitāre}}, present active infini
 * Kyrgyz: {{t|ky|кусуу}}
 * Ladin: {{t|lld|peté su}}, {{t|lld|tré l boppn}}
 * Lao: {{t|lo|ອາຈຽນ}}, {{t|lo|ສຳຮາກ}}, {{t|lo|ອົ້ວະ}}, {{t|lo|ຮາກ}}, {{t|lo|ລົງຮາກ}}
-{{trans-mid}}
 * Latin: {{t|la|vomō}}, {{t|la|vomitō}}
+{{trans-mid}}
 * Latvian: {{t|lv|vemt}}
 * Lithuanian: {{t+|lt|vemti}}
 * Luxembourgish: {{t|lb|katzen}}, {{t|lb|kübelen}}, {{t|lb|schëdden}}, {{t|lb|sech iwwerginn}}, {{t|lb|briechen}}
@@ -127,6 +127,7 @@ From {{inh|en|enm|vomiten}}, from {{der|en|la|vomitāre}}, present active infini
 * Old English: {{t|ang|spīwan}}
 * Old Javanese: {{t|kaw|utah}}
 * Old Norse: {{t|non|spýja}}
+* Oromo: {{t|om|hooqqisiisuu}}
 * Persian: {{t+|fa|قی کردن|tr=qay kardan}}
 * Polish: {{t+|pl|wymiotować|impf}}, {{t+|pl|rzygać|impf}}, {{t+|pl|zwracać|impf}}
 * Portuguese: {{t+|pt|vomitar}}, {{t+|pt|regurgitar}}
