--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -347,6 +347,7 @@ From late {{inh|en|enm|brik}}, {{m|enm|bryke}}, {{m|enm|bricke}}, from {{der|en|
 {{trans-bottom}}
 {{trans-top|color}}
 * French: {{t|fr|rouge brique}}
+* Hungarian: {{t+|hu|téglavörös}}
 * Ukrainian: {{t|uk|цегля́стий}}, {{t+|uk|цегли́стий}}, {{t+|uk|цегляни́й}}, {{t+|uk|цегло́ви́й}}
 {{trans-bottom}}
 {{checktrans-top}}
