--- a/en/備/備.11180.wikitext
+++ b/en/備/備.11180.wikitext
@@ -49,7 +49,8 @@ Area word; compare {{cog|my|ပြင်||to get ready; to prepare}}, {{cog|kac|
 # to [[provide]] or [[prepare]] against; to [[take]] [[precaution]]s [[against]]
 #: {{zh-x|攻其不備|to attack when the enemy is unprepared}}
 #: {{zh-co|以 備 不時之需|for unexpected future use}}
-#* {{zh-x|將 兵 北屯 ^下曲陽，備 ^匈奴。||ref=Houhanshu}}
+#* {{zh-x|君子 曰：「不備 不虞，不可以 師。」|The gentleman said: "One who is not '''prepared against''' the unexpected cannot command troops."|ref=Zuozhuan}}
+#* {{zh-x|將 兵 北屯 ^下曲陽，備 ^匈奴。|({{w|Ma Wu}}) led his troops, whom he stationed north – at Xiaquyang – '''to defend against''' the Xiongnu.|ref=Houhanshu}}
 # [[equipment]]
 #: {{zh-x|軍備|armament; arms}}
 # to [[possess]]
