Added 1 derived character (𢠚) <偸#68585478>

--- a/en/偸/偸.11144.wikitext
+++ b/en/偸/偸.11144.wikitext
@@ -5,6 +5,9 @@
 ===Han character===
 {{Han char|rn=9|rad=人|as=09|sn=11|four=28232|canj=OOMV|ids=⿰亻兪}}
 
+====Derived characters====
+* {{l|mul|[[𢠚]]}}
+
 ====References====
 * {{Han ref|kx=0112.071|dkj=00901|hdz=10193.021|uh=5078|ud=20600}}
 
