t+ru:[[стрейт]] ([[WT:EDIT|Assisted]]) <straight#68638203>

--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -384,7 +384,7 @@ From {{inh|en|enm|streight}}, {{m|enm|streght}}, {{m|enm|streiȝt}}, the past pa
 * Norwegian: {{t|no|heterofil}}
 * Polish: {{t+|pl|hetero}}
 * Portuguese: {{t|pt|hétero}}
-* Russian: {{qualifier|slang, noun}} {{t+|ru|натура́л|m}}, {{qualifier|literally, noun is used}} {{t+|ru|гетеросексуа́л|m|tr=getɛrosɛksuál}}
+* Russian: {{qualifier|slang, noun}} {{t+|ru|натура́л|m}}, {{qualifier|literally, noun is used}} {{t+|ru|гетеросексуа́л|m|tr=getɛrosɛksuál}}, {{t+|ru|стрейт}}
 * Slovak: {{t+|sk|heterosexuálny}}
 * Spanish: {{t|es|hetero}}, {{t|es|hétero}}, {{t+|es|heterosexual}}
 * Swedish: {{t+|sv|heterosexuell}}, {{t+|sv|strejt}} {{qualifier|colloquial}}, {{t+|sv|hetero}}
