--- a/en/p/push.8439.wikitext
+++ b/en/p/push.8439.wikitext
@@ -194,7 +194,7 @@ From {{inh|en|enm|pushen}}, {{m|enm|poshen}}, {{m|enm|posson}}, borrowed from {{
 * Swahili: {{t|sw|kusukuma}}
 * Swedish: {{t+|sv|skjuta}}
 * Tagalog: {{t|tl|itulak}}
-* Tai Dam: {{t|blt|ꪎꪴꪥ}}
+* Tai Dam: {{t|blt|ꪎꪴꪥ|tr=sui}}
 * Tajik: {{t|tg|тела додан}}
 * Tamil: {{t+|ta|தள்ளு}}
 * Telugu: {{t+|te|నెట్టు|sc=Telu}}, {{t+|te|తోయు|sc=Telu}} {{q|tr.}}; {{t|te|శక్తివంతముగా తోయుట|sc=Telu}} {{q|intr.}}
