--- a/en/u/United Kingdom.2101.wikitext
+++ b/en/u/United Kingdom.2101.wikitext
@@ -153,7 +153,7 @@ From {{com|en|united|kingdom}}, first attested from 1706.
 * Uzbek: {{t+|uz|Birlashgan Qirollik}}
 * Vietnamese: {{t+|vi|Vương quốc Anh}}, {{t+|vi|Anh Quốc}} ({{t|vi|英國}})
 * Võro: {{t|vro|Ühendkuningriik}}
-* Welsh: {{t|cy|Teyrnas Unigol|f|alt=Y Deyrnas Unigol}}
+* Welsh: {{t|cy|Teyrnas Unedig|f|alt=Y Deyrnas Unedig}}, {{t|cy|Teyrnas Gyfunol|f|alt=Y Deyrnas Gyfunol}}
 * West Frisian: {{t|fy|Feriene Keninkryk}}
 * Yiddish: {{t|yi|פֿאַראייניקט קעניגרײַך|n}}
 * Yoruba: {{t|yo|Orílẹ́ède Omobabirin}}
